# src/LightOps.NeuralLens.OrganizationApi/Requests/CreateOrganizationRequest.cs
@@ -1,0 +1,5 @@
+﻿namespace LightOps.NeuralLens.OrganizationApi.Requests;
+
+public record CreateOrganizationRequest(
+    string Name,
+    string? Description);
