# src/LightOps.NeuralLens.OrganizationApi/Requests/UpdateOrganizationRequest.cs
@@ -1,0 +1,5 @@
+﻿namespace LightOps.NeuralLens.OrganizationApi.Requests;
+
+public record UpdateOrganizationRequest(
+    string Name,
+    string? Description);
